# langgraph-rag-agent

./: .gitignore  README.md  config.yaml  langgraph.json  main.py  pyproject.toml
data/: knowledge_base.txt
scripts/: generate_uv_lock.py  init_vector_db.py  verify_imports.py  verify_paths.py
src/agent/: config.py  context.py  graph.py  state.py
src/agent/nodes/: __init__.py  llm_direct.py  memory_saver.py  response_generator.py  result_formatter.py  router.py  tool_executor.py
src/agent/utils/: __init__.py  memory.py  rag.py  tools.py  vector_db.py
tests/: test_graph.py  test_nodes.py  test_quick_run.py
